@@ -1,5 +1,10 @@
 2012-01-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/nlib.lisp: Do not add "NIL" extension
+	to file names.
+
+2012-01-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/vmlisp.lisp: Workaround for opening
 	named pipes.
 
